# MonitoringEmployeProgram

./: server.py
client/: CMakeLists.txt
client/client/: client.cpp  client.h  main.cpp
templates/: index.html
